# CogniPrint-open

./: .gitignore  CITATION.cff  DATA_LICENSE.md  Dockerfile.jupyter  Dockerfile.reproduce  LICENSE  Makefile  PUBLIC_RELEASE_MANIFEST.json  README.md  pyproject.toml
audit/: GATE_STATUS.md  release-consistency.md  release-gate-scan.md  zenodo-blocker.md
config/: public-release.json
demo/: README.md  app.py
docs/: current-state-summary.md  evidence-dossier.md  external-review-policy.md
paper/: .gitignore  NOTES.md  README-for-arxiv.md  README.md  arxiv-abstract.txt  arxiv-cautious-descriptive-package.md  cover-note.md  empirical-stability-v1.md  joss.md  main.tex  references.bib  submission-checklist.md  submission-metadata.md
reviewer-bundle/: current-status.md  executive-summary.md  limitations.md  methodology.md  reproducibility.md  reviewer-questions.md
scripts/: bootstrap_validation.py  build_arxiv_package.sh  build_paper.sh  check_claims_drift.py  check_empirical_growth_v1.py  check_evidence_dashboard.py  check_evidence_snapshot.py  check_evidence_visibility.py  check_external_review_status.py  check_independent_holdout_v1.py  check_metadata_consistency.py  check_metric_hashes.py  check_prereg_compliance.py  check_public_benchmark_v11.py  check_statistical_readiness.py  cogniprint_claims_guard.py  decision_gate_fallback.py  decision_gate_status.py  export_public_release.py  fetch_independent_holdout_v1_sources.py  generate_cross_genre_v1.py  generate_empirical_growth_v1.py  generate_human_paraphrase_v1.py  generate_independent_holdout_v1.py  (+21 more)
(+367 files in other folders)
