[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cogniprint"
version = "0.1.2"
description = "Local research workstation for CogniPrint text profile analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Adriashkin Roman", email = "roman@cogniprint.org" }
]
keywords = [
  "statistical text analysis",
  "cognitive fingerprint",
  "research workstation",
  "profile comparison"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "PyYAML>=6.0"
]

[project.optional-dependencies]
real-data = [
  "datasets>=2.18",
  "requests>=2.31"
]
demo = [
  "streamlit>=1.28",
  "numpy>=1.24"
]

[project.urls]
Homepage = "https://cogniprint.org"
Repository = "https://github.com/TakoVHS/CogniPrint"

[project.scripts]
cogniprint = "cogniprint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
